--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,23 +49,26 @@ form{
 .bus-list{
   width: 100%;
   display:flex;
-  justify-content: center;
+  justify-items: center;
   align-items: center;
   flex-direction: column;
 }
 .bus-container {
   box-shadow: 0px 1px 4px rgba(170, 170, 170, 0.25);
+  width: 98%;
   margin: 10px;
-    border-radius: 3px;
-    padding: 12px;
-    border: 1px solid rgb(184, 178, 178);
-    margin-bottom: 1rem;
+  border-radius: 3px;
+  padding: 12px;
+  border: 1px solid rgb(184, 178, 178);
+  margin-bottom: 1rem;
 
 }
 
 .bus-top{
   display: flex;
   justify-content:space-between;
+  font-size:0.9rem;
+
   
     & .bus-name-warp,.bus-time-warp{
       display: flex;
