--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,11 +7,13 @@
 }
 
 .search-container{
-  background-color:#2d67b2;
+
+  background-image: url("Bus-home.jpg");
   display: flex;
   justify-content: center;
   align-items: center;
-  color: white;
+  color: rgb(58, 0, 0);
+  height: 100vh;
 
 }
 
