--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,8 +12,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: rgb(58, 0, 0);
+  color: rgb(252, 227, 227);
   height: 100vh;
+  font-size: large;
 
 }
 
@@ -54,6 +55,7 @@ form{
   justify-items: center;
   align-items: center;
   flex-direction: column;
+  background-color: rgb(238, 238, 238);
 }
 .bus-container {
   box-shadow: 0px 1px 4px rgba(170, 170, 170, 0.25);
@@ -63,6 +65,8 @@ form{
   padding: 12px;
   border: 1px solid rgb(184, 178, 178);
   margin-bottom: 1rem;
+  background-color: rgb(255, 255, 255);
+  cursor:pointer;
 
 }
 
