--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,6 +27,7 @@ body{
   display: inline-block;
 }
 & .input {
+  position: aboslute;
   width: 100%;
   border: 0;
   padding: 8px 0;
@@ -73,31 +74,39 @@ body{
 
 .sug-box{
   position: absolute;
-  top:80px;
+  
   width:90%;
   margin-right: 10px;
-  background-color: white;
-  border: 1px solid #ced4da;
+  background-color: rgb(241, 241, 241);
+  border: 1px solid #8b8a8a;
   border-radius: .25rem;
   z-index: 9;
   max-height: 150px;
-  overflow-y: hidden;
+  overflow-y: scroll;
   transition: 0.1s ease-in;
   & > ul{
     text-decoration: none;
     margin: 0px;
     padding: 10px;
     color:black;
+
     & > li{
       list-style: none;
       text-decoration: none;
       margin: 1px;
-            border-radius: 0px;
       padding: 2px;
       cursor: pointer;
+      font-size: 0.9em;
+      transition:all 0.6 ease-in;
+    }
+
+  & .li-city:hover{
+
+     color: rgb(0, 88, 211);
+  }
     }
   }
-}
+
 
 
 .bus-list{
